# MFrontBookExamples

./: CMakeLists.txt  INSTALL.cmake  README.md
material-properties/: CMakeLists.txt  UO2_FirstLameCoefficient_MFrontBook2022.mfront  UO2_YoungModulus_Martin1989.dgibi  UO2_YoungModulus_Martin1989.mfront  YoungModulus.mfront
models/: CMakeLists.txt  ChemicalReaction1-parametric.mtest  ChemicalReaction1-parametric.py  ChemicalReaction1-parametric.sh  ChemicalReaction1.mfront  ChemicalReaction1.py  ChemicalReaction2.mfront  ChemicalReaction3b.mtest  ChemicalReaction5.mfront  ChemicalReaction5.mtest  ChemicalReaction5b.mtest  ChemicalReaction5c.mtest  ChemicalReaction6.mtest  ChemicalReaction7.mtest  ChemicalReactionVaryingTemperature4.mtest  KoistinenMarburgerPhaseTransformation.mfront  UPuCSolidSwellingModel.mfront  ZircaloyAlloyPhaseTransformation.mfront  ZircaloyAlloy_PhaseTransformation_MassihJernkvist2021.mfront  ZircaloyAlloy_PhaseTransformation_MassihJernkvist2021.mtest
